fix: scrollbar issue when toggle a select component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,7 @@
 html,
 body {
   font-family: 'Inter', sans-serif !important;
+  overflow-y: scroll !important;
 }
 
 .dumy {
